--- a/MOBaPadMapper2/AppShell.xaml
+++ b/MOBaPadMapper2/AppShell.xaml
@@ -1,14 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<Shell
-    x:Class="MOBaPadMapper2.AppShell"
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MOBaPadMapper2"
-    Shell.FlyoutBehavior="Disabled"
-    Title="MOBaPadMapper2">
+<?xml version="1.0" encoding="utf-8" ?>
+<Shell xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+       xmlns:local="clr-namespace:MOBaPadMapper2"
+       x:Class="MOBaPadMapper2.AppShell">
 
     <ShellContent
-        Title="Home"
+        Title="MobaPad"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
 
