--- a/MOBaPadMapper2/MainPage.xaml
+++ b/MOBaPadMapper2/MainPage.xaml
@@ -29,7 +29,8 @@
 
         <!-- Przycisk konfiguracji -->
         <Button Text="Konfiguracja przycisków"
-                />
+        Clicked="ConfigureButton_Clicked" />
+
 
         <Label Text="Podłącz gamepad i używaj przycisków wg aktualnego profilu."
                TextColor="LightGray"
@@ -37,7 +38,8 @@
 
         <Button Text="Testowy przycisk"
             Clicked="OnTestButtonClicked" />
-
+        
+        
         <Label x:Name="GamepadStatusLabel"
            Text="Brak sygnału z gamepada"
            FontSize="18"
